# cx-public

./: .gitignore  Makefile  README.md  cx.pc.in
conformance/: README.md  core.txt  extended.txt  md.txt  xml.txt
docs/: cx.md
examples/: article.cx  books.cx  books.json  books.toml  books.xml  books.yaml  chapter.cx  config.cx  config.json  config.toml  config.xml  config.yaml  doc.cx  doc.md  embedding_test.cx  env.cx  post.cx  vcore.cx
include/: cx.h
lang/python/: Makefile  bench.py  bench_time.py  conformance.py  pyproject.toml  test_api.py  test_cxpath.py  test_immutability.py  test_stream.py  test_transform.py
lang/python/cxlib/: README.md  __init__.py  ast.py  binary.py  cx.py  cxpath.py  stream.py
lang/python/examples/: transform.py
lang/ruby/: bench_time.rb  conformance.rb  test_api.rb
lang/rust/cxlib/: Cargo.toml  README.md  build.rs
lang/rust/cxlib/examples/: demo.rs  transform.rs
lang/rust/cxlib/src/: ast.rs  binary.rs  cxpath.rs  lib.rs  stream.rs
lang/rust/cxlib/tests/: api_test.rs
lang/typescript/: api_test.ts  bench_time.ts  conformance.ts
lang/v/: README.md  conformance.v  v.mod
spec/: SPEC_BRIEF.md  analysis.md  api.md  architecture.md  ast.md  conversions.md  cxpath.md  grammar.ebnf  streaming.md
tooling/: README.md
tooling/lsp/: package-lock.json  package.json
tooling/neovim/: README.md  cx.lua
tooling/tree-sitter-cx/: Makefile  grammar.js  nvim_setup.lua  package.json  tree-sitter.json
tooling/vscode/: language-configuration.json  package-lock.json  package.json
vcx/: Makefile  README.md  v.mod
vcx/cmd/: main.v
(+139 files in other folders)
